fix, refactor, feat(front-end): 【selectitemnew 頁】相框樣式整理至 background_new.css | 修復項目資訊定位問題【storybookdisplaynew 頁】重新排版 | 套用相框樣式 | 調整反光位置 | 增加捲軸樣式 | 重構 js | 修復 scrollbar 內文顯示不全問題

--- a/project/project/static/css/background_new.css
+++ b/project/project/static/css/background_new.css
@@ -64,3 +64,40 @@
     box-shadow: 0 0 10px rgba(255, 219, 157, 0.5); /* 回到初始陰影 */
   }
 }
+
+/* 相框樣式 */
+.ftf_frame {
+  border: 0.45vw solid white;
+  border-radius: 3vw;
+  padding: 1vw;
+  border-width: 1vw;
+  border-style: solid;
+  border-color: #2F2D2D #434040 #4F4C4C #434040;
+  background: #f5f5f5;
+  background-image: linear-gradient(#1b1b1b, #333333);
+  box-shadow: inset 0 0.2vw 0.5vw rgba(0,0,0,.6), 0 0.5vw 0.2vw rgba(0,0,0,.1), 0 1vw 2vw rgba(0,0,0,.8);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+/* 反光效果 */
+.ftf_frame::before {
+  /* border: 0.5rem solid red; */
+  content: "";
+  position: absolute;
+  top: -29vh;
+  right: -19vw;
+  width: 40vw;
+  height: 40vh;
+  transform: rotateZ(-40deg);
+  -webkit-transform: rotateZ(-40deg);
+  -moz-transform: rotateZ(-40deg);
+  -o-transform: rotateZ(-40deg);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(255,255,255,.4)), to(rgba(255,255,255,0)));
+  background-image: -webkit-linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
+  background-image: -moz-linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
+  background-image: -o-linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
+  background-image: linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
+}
