--- a/project/story/static/css/menu/select_item_new.css
+++ b/project/story/static/css/menu/select_item_new.css
@@ -117,43 +117,9 @@ section {
 }
 
 .image_container {
-  border: 0.45vw solid white;
   margin: 3.5vh 2vw 0 2vw;
   width: -webkit-fill-available;
   flex: 4;
-  /* 相框樣式 */
-  border-radius: 3vw;
-  padding: 1vw;
-  border-width: 1vw;
-  border-style: solid;
-  border-color: #2F2D2D #434040 #4F4C4C #434040;
-  background: #f5f5f5;
-  background-image: linear-gradient(#1b1b1b, #333333);
-  box-shadow: inset 0 0.2vw 0.5vw rgba(0,0,0,.6), 0 0.5vw 0.2vw rgba(0,0,0,.1), 0 1vw 2vw rgba(0,0,0,.8);
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-}
-
-/* 反光效果 */
-.image_container::before {
-  /* border: 0.5rem solid red; */
-  content: "";
-  position: absolute;
-  top: -29vh;
-  right: -19vw;
-  width: 40vw;
-  height: 40vh;
-  transform: rotateZ(-40deg);
-  -webkit-transform: rotateZ(-40deg);
-  -moz-transform: rotateZ(-40deg);
-  -o-transform: rotateZ(-40deg);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(255,255,255,.4)), to(rgba(255,255,255,0)));
-  background-image: -webkit-linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
-  background-image: -moz-linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
-  background-image: -o-linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
-  background-image: linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,0));
 }
 
 img {
